--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   </head>
   <body>
+
     <nav class="navbar navbar-default" id="nav_bar">
       <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand navbar-link weather">
-              <img src="" alt=""><strong>Weather App!</strong>
+            <a href="" class="navbar-brand navbar-link">
+              <img src="" alt=""><strong>Weather App</strong>
             </a>
             <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="navcol">
               <span class="sr-only">Toggle navigation</span>
@@ -22,8 +23,8 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navcol">
-              <ul class="nav navbar-nav navbar-right" id="nav_list">
-                <li><a href="sign-in.html">Sign In</a></li>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="current.html">Current</a></li>
                 <li><a href="forecast.html">Forecast</a></li>
                 <li><a href="">Open Weather Map</a></li>
               </ul>
@@ -33,7 +34,7 @@
       </div>
 
     </nav>
-      <div id="root"></div>
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
