--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
               <ul class="nav navbar-nav navbar-right" id="nav_list">
                 <li><a href="sign-in.html">Sign In</a></li>
                 <li><a href="forecast.html">Forecast</a></li>
-                <li><a href="">Open Weather Map</a></li>
+                <li><a href="http://openweathermap.org/data/2.5/weather?q=${location}&units=metric&APPID=f2ec56db020648f18b8e19ae3fb1ac4d" target="_blank">Open Weather Map</a></li>
               </ul>
 
         </div>
