--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="navbar-header">
             <a href="#" class="navbar-brand navbar-link weather">
-              <img src="" alt=""><strong>Weather App!</strong>
+              <img src="images/logo.png" class="image-responsive" id="logo" alt=""><strong>Weather App!</strong>
             </a>
             <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="navcol">
               <span class="sr-only">Toggle navigation</span>
@@ -24,8 +24,8 @@
         <div class="collapse navbar-collapse" id="navcol">
               <ul class="nav navbar-nav navbar-right" id="nav_list">
                 <li><a href="sign-in.html">Sign In</a></li>
-                <li><a href="forecast.html">Forecast</a></li>
-                <li><a href="http://api.openweathermap.org/data/2.5/weather?q=London&units=metric&APPID=f2ec56db020648f18b8e19ae3fb1ac4d" target="_blank">Open Weather Map</a></li>
+                <li><a href="">Open Weather Map</a></li>
+                <li><a href="http://openweathermap.org" target="_blank">Forecast</a></li>
               </ul>
 
         </div>
@@ -33,6 +33,14 @@
       </div>
 
     </nav>
+    <div class="row" id="headRow">
+      <div class="col-md-12" id="colText">
+        <h2 class="text-center" id="colHeadText1">Your BEST weather app ever!</h2>
+        <h2 class="text-center" id="colHeadText2">Get the info you need now!</h2>
+      </div>
+
+
+    </div>
       <div id="root"></div>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
