--- a/public/index.html
+++ b/public/index.html
@@ -27,23 +27,36 @@
                 <li><a href="">Open Weather Map</a></li>
                 <li><a href="http://openweathermap.org" target="_blank">Forecast</a></li>
               </ul>
-
         </div>
-
       </div>
-
     </nav>
+
     <div class="row" id="headRow">
       <div class="col-md-12" id="colText">
         <h2 class="text-center" id="colHeadText1">Your BEST weather app ever!</h2>
         <h2 class="text-center" id="colHeadText2">Get the info you need now!</h2>
       </div>
+    </div>
 
+    <div class="row" id="bottomRow">
+      <h2 class="text-center" id="colHeadText1">Get your 5 day forecast</h2>
+    </div>
+
+    <div class="row" id="bottomRow-2">
+      <div class="col-sm-3" >Mon</div>
+      <div class="col-sm-3" >Tue</div>
+      <div class="col-sm-3" >Wed</div>
+      <div class="col-sm-3" >Thur</div>
 
     </div>
-      <div id="root"></div>
+
+
+
+
+    <div id="root"></div>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </body>
 </html>
