--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-
-    <title>Weather App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
-    <nav class="navbar navbar-default" id="nav_bar">
-      <div class="container">
-        <div class="navbar-header">
-            <a href="#" class="navbar-brand navbar-link weather">
-              <img src="images/logo.png" class="image-responsive" id="logo" alt=""><strong>Weather App!</strong>
-            </a>
-            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="navcol">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-           </button>
-        </div>
-
-        <div class="collapse navbar-collapse" id="navcol">
-              <ul class="nav navbar-nav navbar-right" id="nav_list">
-                <li><a href="sign-in.html">Sign In</a></li>
-                <li><a href="">Open Weather Map</a></li>
-                <li><a href="http://openweathermap.org" target="_blank">Forecast</a></li>
-              </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="row" id="headRow">
-      <div class="col-md-12" id="colText">
-        <h2 class="text-center" id="colHeadText1">Your BEST weather app ever!</h2>
-        <h2 class="text-center" id="colHeadText2">Get the info you need now!</h2>
-      </div>
-    </div>
-
-    <div class="row" id="bottomRow">
-      <h2 class="text-center" id="colHeadText1">Get your 5 day forecast</h2>
-    </div>
-
-    <div class="row" id="bottomRow-2">
-      <div class="col-sm-3" >Mon</div>
-      <div class="col-sm-3" >Tue</div>
-      <div class="col-sm-3" >Wed</div>
-      <div class="col-sm-3" >Thur</div>
-
-    </div>
-
-
-
-
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
